[package]
name = "ostruka-core"
version = "0.1.0"
authors = ["mikelma <mikelma7@gmail.com>"]
edition = "2018"
description = "Core utils for ostruka, an ostrich client"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
ostrich-core = { git = "https://github.com/mikelma/ostrich-core" } 
